# TestScribe

./: .gitignore  CHANGELOG.md  README.md  game_op.txt  game_parse.txt  jest.config.js  package-lock.json  package.json  parse_template.ts  parser.js.map  templated_op.txt  templated_parse.txt  tool_card_op.txt  tool_card_parse.txt  tournament_parse.txt  tsconfig.json
src/: build_system_interface.ts  cmake_build_system.ts  cpp_better_parser.ts  cpp_googletest_creator.ts  cpp_objects.ts  cpp_operators.ts  cpp_parser.ts  cpp_primitive_types.ts  cpp_test_creator.ts  extension.ts  file_system_parser.ts  parser.ts  templates.ts  test.ts  test_creator.ts  test_creator_context.ts
src/data/data/src/: structs.hpp  templated.h  templated_operator.h
src/data/data/src/nested/: structs_with_methods.h
src/data/data/src/tiered/: structs.hpp
src/data/data2/: tool_card.h  tournament.h
src/demo/: CMakeLists.txt
src/demo/include/Controller/: IController.h  LocalController.h
src/demo/include/Model/: TicTacToe.hpp
src/demo/src/Model/: TicTacToe.cpp
src/demo/src/View/Client/: main.cpp
src/test/: another.test.ts  better_parser_test.ts  example.cpp  extension.test.ts  game.h  parser.test.ts  template_param_replacer_test.ts  templated.h
src/test/data/src/: example.cpp  structs.hpp  templated.h  templated_operator.h
src/test/data/src/nested/: example.h
src/test/data/src/nested/double_nested/: Game.h  game.cpp
src/test/data/tests/: CMakeLists.txt
src/test/data/tests/src/: CMakeLists.txt  OtherClassTest.cpp  SomeStructTest.cpp
src/test/data/tests/src/nested/: PersonTest.cpp  PointTest.cpp
src/test/data/tests/src/nested/double_nested/: GameTest.cpp
src/test/data2/: game.h
src/tryouts/: better_parser_test.ts  parser.t.ts  template_param_replacer_test.ts
templates/CMake/: CMakeLists.txt  CMakeLists_local.txt
templates/GoogleTest/: CMakeLists.txt  test_exception.cpp  test_parametrized.cpp  test_parametrized_instantiation_combine.cpp  test_parametrized_instantiation_return_type.cpp  test_parametrized_simple.cpp  test_parametrized_suite_class.cpp  test_parametrized_suite_class_for_func.cpp  test_parametrized_suite_class_simple.cpp  test_simple.cpp  test_suite_class.cpp  test_type_parametrized.cpp  test_typed.cpp  test_typed_instantiate.cpp  test_typed_suite_class.cpp
test/: PersonTest.cpp  PointTest.cpp
test/data/: structs.cpp  structs_with_methods.cpp
testscribe/: README.md  package-lock.json  package.json  parser.js  parser.ts
testscribe/src/: extension.ts
testscribe/templates/: welcomeMessage.txt
